@@ -3199,3 +3199,206 @@ AddressCallContext::$supportedActions['move-wildcard2network'] = array(
         }
     }
 );
+
+
+AddressCallContext::$supportedActions['upload-Address-2CloudManager'] = array(
+    'name' => 'upload-address-2cloudmanager',
+    'GlobalInitFunction' => function (AddressCallContext $context) {
+        //get Panorama config
+        //possible: XML file / XML API
+        //including DG
+
+        if( $context->isSaseAPI === False )
+            derr( "only Strata Cloud manager is supported for this type=address action", null, False );
+
+        $filename = $context->arguments['file'];
+        $DGname = $context->arguments['dg_name'];
+        $context->objectList = array();
+
+        ##########################################
+
+        $argv2 = array();
+        $argc2 = array();
+        PH::$args = array();
+        PH::$argv = array();
+        $argv2[0] = "test";
+
+        if( file_exists( $context->arguments['file'] ) )
+                $argv2[] = "in=".$filename;
+        else
+            derr("cannot open file '{$filename}", null, False);
+
+        //create new UTIL with Panorama config in
+        $util2 = new UTIL("custom", $argv2, $argc2, "actions=upload-address-2cloudmanager");
+        $util2->utilInit();
+        $util2->load_config();
+
+##########################################
+##########################################
+
+        $pan = $util2->pan;
+
+        //check that load config file is Panorama
+        if( $pan->isPanorama() )
+        {
+            //find DG name
+            $sub = $pan->findDeviceGroup( $DGname );
+            if( $sub === null )
+                $util2->locationNotFound($DGname);
+        }
+
+        else
+            derr( "only Panorama config file is supported", null, False );
+
+        ##########################################
+
+        foreach( $sub->addressStore->all( "!(object is.group) and !(object is.tmp)" ) as $obj )
+        {
+            $context->objectList[] = $obj;
+            #print $obj->name()."\n";
+        }
+
+    },
+    'MainFunction' => function (AddressCallContext $context) {
+
+    },
+    'GlobalFinishFunction' => function (AddressCallContext $context) {
+
+        $addressStore = $context->subSystem->addressStore;
+
+        foreach( $context->objectList as $object )
+        {
+            if( $object->isGroup() || $object->isTmpAddr() )
+            {
+                $string = "Address object is Group or TMP - not supported";
+                PH::ACTIONstatus( $context, 'skipped', $string);
+                continue;
+            }
+
+            $newName = $object->name();
+            $value = $object->value();
+            $type = $object->type();
+
+            $string = "upload Address object : '" . $newName . "' - type: ".$type." - value: ".$value;
+            PH::ACTIONlog( $context, $string );
+
+            if( $context->isAPI )
+                $addressStore->API_newAddress($newName, $type, $value);
+            else
+                derr( "only API supported" );
+        }
+    },
+    'args' => array(
+        'file' => Array( 'type' => 'string',
+            'default' => '*nodefault*'
+        ),
+        'dg_name' => array('type' => 'string', 'default' => '*nodefault*')
+    )
+);
+
+AddressCallContext::$supportedActions['upload-AddressGroup-2CloudManager'] = array(
+    'name' => 'upload-addressgroup-2cloudmanager',
+    'GlobalInitFunction' => function (AddressCallContext $context) {
+        //get Panorama config
+        //possible: XML file / XML API
+        //including DG
+
+        #if( $context->isSaseAPI === False )
+        #    derr( "only Strata Cloud manager is supported for this type=address action", null, False );
+
+        $filename = $context->arguments['file'];
+        $DGname = $context->arguments['dg_name'];
+        $context->objectList = array();
+
+        ##########################################
+
+        $argv2 = array();
+        $argc2 = array();
+        PH::$args = array();
+        PH::$argv = array();
+        $argv2[0] = "test";
+
+        if( file_exists( $context->arguments['file'] ) )
+            $argv2[] = "in=".$filename;
+        else
+            derr("cannot open file '{$filename}", null, False);
+
+        //create new UTIL with Panorama config in
+        $util2 = new UTIL("custom", $argv2, $argc2, "actions=upload-address-2cloudmanager");
+        $util2->utilInit();
+        $util2->load_config();
+
+##########################################
+##########################################
+
+        $pan = $util2->pan;
+
+        //check that load config file is Panorama
+        if( $pan->isPanorama() )
+        {
+            //find DG name
+            $sub = $pan->findDeviceGroup( $DGname );
+            if( $sub === null )
+                $util2->locationNotFound($DGname);
+        }
+
+        else
+            derr( "only Panorama config file is supported", null, False );
+
+        ##########################################
+
+        foreach( $sub->addressStore->all( "(object is.group)" ) as $obj )
+        {
+            #print $obj->name()."\n";
+            /** @var $obj AddressGroup */
+            $context->objectList[$obj->name()]['obj'] = $obj;
+
+        }
+
+    },
+    'MainFunction' => function (AddressCallContext $context) {
+    },
+    'GlobalFinishFunction' => function (AddressCallContext $context) {
+
+        $addressStore = $context->subSystem->addressStore;
+
+        foreach( $context->objectList as $object_entry )
+        {
+            $object = $object_entry['obj'];
+            if( !$object->isGroup() )
+            {
+                $string = "Address object is not Group - not supported";
+                PH::ACTIONstatus( $context, 'skipped', $string);
+                continue;
+            }
+
+            $newName = $object->name();
+            $string = "upload AddressGroup object : '" . $newName;
+            PH::ACTIONlog( $context, $string );
+
+            //check that addressgroup and all members are available
+            //then API sync if possible
+
+            $adrGrp = $addressStore->newAddressGroup( $newName );
+            foreach( $object->members() as $member2 )
+            {
+                if( $object->owner === $member2->owner )
+                    $adrGrp->addMember( $member2 );
+                else
+                {
+                    mwarning( "this objectname: ".$member2->name()." is part of another DG: ".$member2->owner->owner->name() );
+                }
+            }
+
+
+            if( $context->isAPI )
+                $adrGrp->API_sync( true );
+        }
+    },
+    'args' => array(
+        'file' => Array( 'type' => 'string',
+            'default' => '*nodefault*'
+        ),
+        'dg_name' => array('type' => 'string', 'default' => '*nodefault*')
+    )
+);
